recover to original files to solve the problem that article cannot be given

--- a/public/views/default/explore/ajax/list.tpl.htm
+++ b/public/views/default/explore/ajax/list.tpl.htm
@@ -51,7 +51,7 @@
 
 		</div>
 		<?php if (cjk_strlen($val['message']) > 130) { ?>
-		<a class="more" href="article/<?php echo $val['id']; ?>"><? _e('查看更多') ?></a>
+		<a class="more" href="article/<?php echo $val['id']; ?>">查看更多</a>
 		<?php } ?>
 		<!-- end 文章内容调用 -->
 		<?php } ?>
