--- a/public/views/default/question/index.tpl.htm
+++ b/public/views/default/question/index.tpl.htm
@@ -488,7 +488,7 @@
 									<span class="pull-right text-color-999" id="answer_content_message">&nbsp;</span>
 									<?php if (get_setting('upload_enable') == 'Y') { ?>
 									<div class="aw-upload-box">
-										<a class="btn btn-default"><?php _e('上传附件'); ?></a>
+										<a class="btn btn-default">上传附件</a>
 										<div class="upload-container"></div>
 										<span class="text-color-999 aw-upload-tips hidden-xs"><?php _e('允许'); ?> : <?php echo get_setting('allowed_upload_types'); ?></span>
 									</div>
